--- a/style/main.less
+++ b/style/main.less
@@ -1,14 +1,77 @@
+/* 颜色 */
 // light模式
-@light-title: #1f2937; // 题目字体 @gray-800
+@light-title: #000000; // 题目字体 @gray-800
 @light-text: #3f3f46; // 正文字体  zinc-700
-@light-bg: #f1f2f4; // 背景 手写的
+@light-bg: #fff; // 背景 手写的
 
-// 暗黑模式
+// dark模式
 @dark-text: #d4d4d8; // 字体 @zinc-300
 @dark-title: #d4d4d8; // 标题 @zinc-300
 @dark-bg: #020617; // 背景 @slate-950
 
-// 屏幕尺寸
+/* 屏幕尺寸 */
 @ipad: 768px;
-// 没用到
-@iphone: 375px;  
+@iphone: 375px;  // 暂时没用到
+
+/* 大屏模式 */
+@big-title-1-size: 3rem;
+@big-title-2-size: 2rem;
+@big-title-3-size: 1.25rem;
+
+/* 小屏模式 */
+
+
+.light-title-1 {
+	color: @light-title;
+	font-size: 3rem;
+	font-weight: 600;
+}
+
+.light-title-2 {
+	color: @light-title;
+	font-size: 2rem;
+	font-weight: 600;
+}
+
+.light-title-3 {
+	color: @light-title;
+	font-size: 1.25rem;
+	font-weight: 600;
+}
+
+.dark-title-1 {
+	color: @dark-title;
+	font-size: 3rem;
+}
+
+.dark-title-2 {
+	color: @dark-title;
+	font-size: 2rem;
+	font-weight: 600;
+}
+
+.dark-title-3 {
+	color: @dark-title;
+	font-size: 1.25rem;
+	font-weight: 600;
+}
+
+.light-text-1 {
+	color: #3f3f46;
+	font-size: 1rem;
+}
+
+.dark-text-1 {
+	color: @dark-text;
+	font-size: 1rem;
+}
+
+.light-variable {
+    --color: red;
+    --background-color: red;
+}
+
+.dark-variable {
+    --color: #fff;
+    --background-color: #000;
+}
